src/css/index.css
html,body {
  height: 100%;
}
body {
  background-color: #333;
}

/* Flex grid items */

.react-grid-item {
  /* emulate bootstrap .flex-column: */
  -webkit-box-orient: vertical!important;
  -webkit-box-direction: normal!important;
  -ms-flex-direction: column!important;
  flex-direction: column!important;

  /* emulate bootstrap .d-flex: */
  display: -webkit-box!important;
  display: -ms-flexbox!important;
  display: flex!important;

  /* So the resize handle position looks correct: */
  padding-right: 10px;
}

/* Tool styles */

.bg-light {
  background-color: #222!important;
  color: lightgrey;
}
.bg-light a {
  color: #9bb7d6;
}
.bg-black {
  background-color: black;
  color: lightgrey;
}
.title {
  color: lightgrey;
  cursor: grab;
}
.title:active {
  cursor: grabbing;
}
.scroll {
  overflow: scroll;
}
.details {
  font-size: 80%;
  opacity: 0.8;
}


/* Spatial and t-SNE controls */

.btn.icon {
  padding: 0.2em;
  height: 2em;
  width: 2em;
  background-color: white;
}
.roll-up {
  height: 2em; /* Matches .btn.icon */
  overflow: hidden;
}
.roll-up:hover {
  animation-name: roll-up;
  animation-duration: 0.5s;
  animation-fill-mode: forwards;
}
@keyframes roll-up {
  0% { height: 2em; }
  100% { height: 100%; }
}
.tool {
  z-index: 1000;
  opacity: .65;
  color: black;
}
.tool:hover {
  opacity: .90;
}


/* Option lists */

input[type="radio"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  /* create custom radiobutton appearance */
  display: inline-block;
  width: 1em;
  height: 1em;
  padding: 6px;
  /* background-color only for content */
  background-clip: content-box;
  border: 2px solid lightgrey;
  background-color: lightgrey;
  border-radius: 50%;
}
input[type="radio"]:checked {
  background-clip: unset;
}

